Implement SQL sync operation with configurable strategies and QueryDSL alignment