@@ -11,26 +11,20 @@ import com.evolveum.polygon.sql.base.build.api.SqlAttributeMapping;
 import com.evolveum.polygon.sql.base.connection.SqlSchemaValueMapping;
 import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.sql.RelationalPathBase;
-import org.identityconnectors.framework.common.objects.Uid;
-import org.identityconnectors.framework.common.objects.filter.*;
+import org.identityconnectors.framework.common.objects.filter.AttributeFilter;
+import org.identityconnectors.framework.common.objects.filter.Filter;
+import org.identityconnectors.framework.common.objects.filter.FilterBuilder;
 import org.testng.annotations.Test;
 
 import java.sql.Date;
 import java.sql.Time;
 import java.sql.Timestamp;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.ZonedDateTime;
-import java.time.ZoneId;
-import java.util.ArrayList;
+import java.time.*;
 import java.util.List;
 
 import static org.identityconnectors.framework.common.objects.AttributeBuilder.build;
-
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.identityconnectors.framework.common.objects.AttributeBuilder.*;
 
 /**
  * Unit tests for datetime filter support in {@link SqlAttributeMapping} and {@link SqlSchemaValueMapping}.
@@ -44,20 +38,20 @@ public class SqlDatetimeFilterTest {
     @Test
     public void dateToWireValueWithStringYyyyMmDd() {
         var result = SqlSchemaValueMapping.DATE.toWireValue("2024-06-15");
-        assertThat(result).isInstanceOf(java.sql.Date.class);
-        assertThat(result).isEqualTo(java.sql.Date.valueOf("2024-06-15"));
+        assertThat(result).isInstanceOf(Date.class);
+        assertThat(result).isEqualTo(Date.valueOf("2024-06-15"));
     }
 
     @Test
     public void dateToWireValueWithLocalDate() {
         var result = SqlSchemaValueMapping.DATE.toWireValue(LocalDate.of(2024, 3, 20));
-        assertThat(result).isInstanceOf(java.sql.Date.class);
-        assertThat((java.sql.Date) result).isEqualTo(java.sql.Date.valueOf("2024-03-20"));
+        assertThat(result).isInstanceOf(Date.class);
+        assertThat((Date) result).isEqualTo(Date.valueOf("2024-03-20"));
     }
 
     @Test
     public void dateToWireValueWithPassthrough() {
-        var input = java.sql.Date.valueOf("2024-12-25");
+        var input = Date.valueOf("2024-12-25");
         var result = SqlSchemaValueMapping.DATE.toWireValue(input);
         assertThat(result).isSameAs(input);
     }
@@ -66,8 +60,8 @@ public class SqlDatetimeFilterTest {
     public void dateToWireValueWithTimestampString() {
         // String like "2024-06-15 10:00:00" should be parsed by taking first 10 chars
         var result = SqlSchemaValueMapping.DATE.toWireValue("2024-06-15 10:00:00");
-        assertThat(result).isInstanceOf(java.sql.Date.class);
-        assertThat(result).isEqualTo(java.sql.Date.valueOf("2024-06-15"));
+        assertThat(result).isInstanceOf(Date.class);
+        assertThat(result).isEqualTo(Date.valueOf("2024-06-15"));
     }
 
     @Test
@@ -86,20 +80,20 @@ public class SqlDatetimeFilterTest {
     @Test
     public void timeToWireValueWithStringFull() {
         var result = SqlSchemaValueMapping.TIME.toWireValue("14:30:45");
-        assertThat(result).isInstanceOf(java.sql.Time.class);
-        assertThat(result).isEqualTo(java.sql.Time.valueOf("14:30:45"));
+        assertThat(result).isInstanceOf(Time.class);
+        assertThat(result).isEqualTo(Time.valueOf("14:30:45"));
     }
 
     @Test
     public void timeToWireValueWithLocalTime() {
         var result = SqlSchemaValueMapping.TIME.toWireValue(LocalTime.of(9, 15, 30));
-        assertThat(result).isInstanceOf(java.sql.Time.class);
-        assertThat(result).isEqualTo(java.sql.Time.valueOf("09:15:30"));
+        assertThat(result).isInstanceOf(Time.class);
+        assertThat(result).isEqualTo(Time.valueOf("09:15:30"));
     }
 
     @Test
     public void timeToWireValueWithPassthrough() {
-        var input = java.sql.Time.valueOf("20:00:00");
+        var input = Time.valueOf("20:00:00");
         var result = SqlSchemaValueMapping.TIME.toWireValue(input);
         assertThat(result).isSameAs(input);
     }
@@ -108,8 +102,8 @@ public class SqlDatetimeFilterTest {
     public void timeToWireValueWithTimestampString() {
         // String like "2024-06-15 14:30:45" should extract time part
         var result = SqlSchemaValueMapping.TIME.toWireValue("2024-06-15 14:30:45");
-        assertThat(result).isInstanceOf(java.sql.Time.class);
-        assertThat(result).isEqualTo(java.sql.Time.valueOf("14:30:45"));
+        assertThat(result).isInstanceOf(Time.class);
+        assertThat(result).isEqualTo(Time.valueOf("14:30:45"));
     }
 
     @Test
@@ -121,52 +115,52 @@ public class SqlDatetimeFilterTest {
     @Test
     public void timestampToWireValueWithString() {
         var result = SqlSchemaValueMapping.TIMESTAMP.toWireValue("2024-06-15 10:30:00");
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
-        assertThat(result).isEqualTo(java.sql.Timestamp.valueOf("2024-06-15 10:30:00"));
+        assertThat(result).isInstanceOf(Timestamp.class);
+        assertThat(result).isEqualTo(Timestamp.valueOf("2024-06-15 10:30:00"));
     }
 
     @Test
     public void timestampToWireValueWithZonedDateTime() {
-        var zdt = ZonedDateTime.of(2024, 6, 15, 10, 30, 0, 0, java.time.ZoneId.systemDefault());
+        var zdt = ZonedDateTime.of(2024, 6, 15, 10, 30, 0, 0, ZoneId.systemDefault());
         var result = SqlSchemaValueMapping.TIMESTAMP.toWireValue(zdt);
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
-        assertThat(((java.sql.Timestamp) result).toLocalDateTime()).isEqualTo(zdt.toLocalDateTime());
+        assertThat(result).isInstanceOf(Timestamp.class);
+        assertThat(((Timestamp) result).toLocalDateTime()).isEqualTo(zdt.toLocalDateTime());
     }
 
     @Test
     public void timestampToWireValueWithLocalDate() {
         var result = SqlSchemaValueMapping.TIMESTAMP.toWireValue(LocalDate.of(2024, 6, 15));
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
-        assertThat(((java.sql.Timestamp) result).toLocalDateTime()).isEqualTo(LocalDateTime.of(2024, 6, 15, 0, 0, 0));
+        assertThat(result).isInstanceOf(Timestamp.class);
+        assertThat(((Timestamp) result).toLocalDateTime()).isEqualTo(LocalDateTime.of(2024, 6, 15, 0, 0, 0));
     }
 
     @Test
     public void timestampToWireValueWithISO8601String() {
         var result = SqlSchemaValueMapping.TIMESTAMP.toWireValue("2024-06-15T10:30:00");
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
-        assertThat(((java.sql.Timestamp) result).toLocalDateTime()).isEqualTo(LocalDateTime.of(2024, 6, 15, 10, 30, 0));
+        assertThat(result).isInstanceOf(Timestamp.class);
+        assertThat(((Timestamp) result).toLocalDateTime()).isEqualTo(LocalDateTime.of(2024, 6, 15, 10, 30, 0));
     }
 
     @Test
     public void timestampToWireValueWithZonedDateTimeAsFilterValue() {
         var zdt = ZonedDateTime.parse("2024-06-15T10:30:00+02:00");
         var result = SqlSchemaValueMapping.TIMESTAMP.toWireValue(zdt);
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
-        assertThat(java.time.Instant.ofEpochMilli(((java.sql.Timestamp) result).getTime())).isEqualTo(zdt.toInstant());
+        assertThat(result).isInstanceOf(Timestamp.class);
+        assertThat(Instant.ofEpochMilli(((Timestamp) result).getTime())).isEqualTo(zdt.toInstant());
     }
 
     @Test
     public void timestampWithTimezoneToWireValueWithString() {
         var result = SqlSchemaValueMapping.TIMESTAMP_WITH_TIMEZONE.toWireValue("2024-06-15 10:30:00");
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
-        assertThat(result).isEqualTo(java.sql.Timestamp.valueOf("2024-06-15 10:30:00"));
+        assertThat(result).isInstanceOf(Timestamp.class);
+        assertThat(result).isEqualTo(Timestamp.valueOf("2024-06-15 10:30:00"));
     }
 
     @Test
     public void timestampWithTimezoneToWireValueWithZonedDateTime() {
-        var zdt = ZonedDateTime.of(2024, 6, 15, 10, 30, 0, 0, java.time.ZoneId.of("UTC"));
+        var zdt = ZonedDateTime.of(2024, 6, 15, 10, 30, 0, 0, ZoneId.of("UTC"));
         var result = SqlSchemaValueMapping.TIMESTAMP_WITH_TIMEZONE.toWireValue(zdt);
-        assertThat(result).isInstanceOf(java.sql.Timestamp.class);
+        assertThat(result).isInstanceOf(Timestamp.class);
     }
 
     @Test
@@ -207,7 +201,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.DATE
         );
         var filter = FilterBuilder.equalTo(build("date_col", "2024-06-15"));
-        BooleanExpression pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -219,7 +213,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.DATE
         );
         var filter = FilterBuilder.greaterThan(build("date_col", "2024-06-01"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -231,7 +225,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.DATE
         );
         var filter = FilterBuilder.lessThan(build("date_col", "2024-06-01"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -243,7 +237,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.DATE
         );
         var filter = FilterBuilder.greaterThanOrEqualTo(build("date_col", "2024-06-01"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -255,7 +249,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.DATE
         );
         var filter = FilterBuilder.lessThanOrEqualTo(build("date_col", "2024-06-01"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -266,9 +260,9 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.DATE,
                 SqlSchemaValueMapping.DATE
         );
-        var zdt = ZonedDateTime.of(2024, 6, 15, 10, 0, 0, 0, java.time.ZoneId.systemDefault());
+        var zdt = ZonedDateTime.of(2024, 6, 15, 10, 0, 0, 0, ZoneId.systemDefault());
         var filter = FilterBuilder.equalTo(build("date_col", zdt));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -280,7 +274,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.TIMESTAMP
         );
         var filter = FilterBuilder.equalTo(build("ts_col", "2024-06-15 10:30:00"));
-        BooleanExpression pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -292,7 +286,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.TIMESTAMP
         );
         var filter = FilterBuilder.greaterThan(build("ts_col", "2024-06-01 00:00:00"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -304,7 +298,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.TIMESTAMP
         );
         var filter = FilterBuilder.lessThan(build("ts_col", "2024-06-01 00:00:00"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -316,7 +310,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.TIMESTAMP
         );
         var filter = FilterBuilder.greaterThanOrEqualTo(build("ts_col", "2024-06-01 00:00:00"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -328,7 +322,7 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.TIMESTAMP
         );
         var filter = FilterBuilder.lessThanOrEqualTo(build("ts_col", "2024-06-01 00:00:00"));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -339,10 +333,10 @@ public class SqlDatetimeFilterTest {
                 SqlSchemaValueMapping.TIMESTAMP,
                 SqlSchemaValueMapping.TIMESTAMP
         );
-        var instantStr = java.time.Instant.parse("2024-06-15T10:30:00Z");
-        var zdt = instantStr.atZone(java.time.ZoneId.systemDefault());
+        var instantStr = Instant.parse("2024-06-15T10:30:00Z");
+        var zdt = instantStr.atZone(ZoneId.systemDefault());
         var filter = FilterBuilder.equalTo(build("ts_col", zdt));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -355,7 +349,7 @@ public class SqlDatetimeFilterTest {
         );
         var zdt = ZonedDateTime.parse("2024-06-15T10:30:00+02:00");
         var filter = FilterBuilder.equalTo(build("ts_col", zdt));
-        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (org.identityconnectors.framework.common.objects.filter.AttributeFilter) filter);
+        var pred = column.sqlFilter().predicateFor(createTablePath("t"), (AttributeFilter) filter);
         assertThat(pred).isNotNull();
     }
 
@@ -377,7 +371,7 @@ public class SqlDatetimeFilterTest {
 
 var result = composite.valuesFromAttribute("5.100");
         assertThat(result).hasSize(2);
-        assertThat(result.get(0)).isEqualTo("5");
+        assertThat(result.getFirst()).isEqualTo("5");
         assertThat(result.get(1)).isEqualTo("100");
     }
 }
